// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ARBAColumnConfiguration component should render column "annotation_covered": annotation_covered 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      protein name
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ARBAColumnConfiguration component should render column "rule_id": rule_id 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/arba/ARBA00020180"
    >
      ARBA00020180
    </a>
  </span>
</DocumentFragment>
`;

exports[`ARBAColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=%28source%3AARBA00020180%29"
      >
        329 UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28source%3AARBA00020180%29+AND+%28reviewed%3Afalse%29"
      >
        329 unreviewed UniProtKB entries
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ARBAColumnConfiguration component should render column "taxonomic_scope": taxonomic_scope 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span
        class="no-wrap"
      >
        <a
          href="/taxonomy/314145"
          title="Laurasiatheria, taxon ID 314145"
          translate="no"
        >
          Laurasiatheria
        </a>
      </span>
    </li>
    <li>
      <span
        class="no-wrap"
      >
        <a
          href="/taxonomy/1489922"
          title="Eupercaria, taxon ID 1489922"
          translate="no"
        >
          Eupercaria
        </a>
      </span>
    </li>
  </ul>
</DocumentFragment>
`;
